--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
             //  We need this because the assets are on github pages
             //  Remove the next 2 lines if running locally
-            this.load.baseURL = 'https://ioniodi.github.io/pacman/';
-            this.load.crossOrigin = 'anonymous';
+            //this.load.baseURL = 'https://ioniodi.github.io/pacman/';
+            this.load.baseURL = 'https://katerinamalakoudh.github.io/pacman/';
+            this.load.crossOrigin = 'katerinamalakoudh';
 
             this.load.image('dot', 'assets/dot.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
