--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             this.load.baseURL = 'https://katerinamalakoudh.github.io/pacman/';
             this.load.crossOrigin = 'katerinamalakoudh';
 
-            this.load.image('dot', 'assets/dot.png');
+            this.load.image('dot', 'assets/new-dot.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
             this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
             this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
