--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             //this.load.image('dot', 'assets/dot.png');
             this.load.image('dot', 'assets/new-dot.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
-            //this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
-            this.load.spritesheet('pacman', 'assets/new-pacman.png', 32, 32);
-            //this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
-            this.load.tilemap('map', 'assets/new-pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
+            this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
+            //this.load.spritesheet('pacman', 'assets/new-pacman.png', 32, 32);
+            this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
+            //this.load.tilemap('map', 'assets/new-pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
 
             //  Needless to say, graphics (C)opyright Namco
 
