--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             this.load.crossOrigin = 'katerinamalakoudh';
 
             //this.load.image('dot', 'assets/dot.png');
-            this.load.image('dot', 'assets/apple.png');
+            this.load.image('dot', 'assets/zari.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
             //this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
             this.load.spritesheet('pacman', 'assets/new-pacman.png', 32, 32);
