--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             //  We need this because the assets are on github pages
             //  Remove the next 2 lines if running locally
             //this.load.baseURL = 'https://ioniodi.github.io/pacman/';
-            this.load.baseURL = 'https://katerinamalakoudh.github.io/pacman/';
-            this.load.crossOrigin = 'katerinamalakoudh';
+            this.load.baseURL = 'https://katerinamalakoudi.github.io/pacman/';
+            this.load.crossOrigin = 'katerinamalakoudi';
 
             //this.load.image('dot', 'assets/dot.png');
             this.load.image('dot', 'assets/zari.png');
